# secure_copilot

./: .gitignore  data_loading.py  dataset.txt  mcp.py  pyproject.toml  rag.ipynb  req.txt
