[project]
name = "secure-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "chromadb>=1.3.4",
    "filelock==3.20.0",
    "fsspec==2025.10.0",
    "google-genai>=1.49.0",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "ipywidgets>=8.1.8",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "packaging==25.0",
    "pandas>=2.3.3",
    "pillow==12.0.0",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sentence-transformers==5.1.2",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
]
